--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,13 @@ certifi==2020.6.20
 chardet==3.0.4
 idna==2.10
 joblib==0.16.0
+mysql-connector-python==8.0.21
 numpy==1.19.2
+protobuf==3.13.0
 requests==2.24.0
 scikit-learn==0.23.2
 scipy==1.5.2
+six==1.15.0
 soupsieve==2.0.1
 threadpoolctl==2.1.0
 urllib3==1.25.10
